@@ -1,52 +1,23 @@
 package ai.timefold.solver.core.impl.heuristic.selector.move.generic.list.kopt;
 
+import java.util.Collections;
 import java.util.List;
 
 import ai.timefold.solver.core.impl.util.CollectionUtils;
-import ai.timefold.solver.core.impl.util.Pair;
 
-final class KOptAffectedElements {
-    private final int wrappedStartIndex;
-    private final int wrappedEndIndex;
-    private final List<Pair<Integer, Integer>> affectedMiddleRangeList;
-
-    private KOptAffectedElements(int wrappedStartIndex, int wrappedEndIndex,
-            List<Pair<Integer, Integer>> affectedMiddleRangeList) {
-        this.wrappedStartIndex = wrappedStartIndex;
-        this.wrappedEndIndex = wrappedEndIndex;
-        this.affectedMiddleRangeList = affectedMiddleRangeList;
-    }
+record KOptAffectedElements(int wrappedStartIndex, int wrappedEndIndex, List<Range> affectedMiddleRangeList) {
 
     static KOptAffectedElements forMiddleRange(int startInclusive, int endExclusive) {
-        return new KOptAffectedElements(-1, -1, List.of(new Pair<>(startInclusive, endExclusive)));
+        return new KOptAffectedElements(-1, -1, List.of(new Range(startInclusive, endExclusive)));
     }
 
     static KOptAffectedElements forWrappedRange(int startInclusive, int endExclusive) {
-        return new KOptAffectedElements(startInclusive, endExclusive, List.of());
+        return new KOptAffectedElements(startInclusive, endExclusive, Collections.emptyList());
     }
 
-    // ***********************************************
-    // Simple getters
-    // ***********************************************
-
-    public int getWrappedStartIndex() {
-        return wrappedStartIndex;
-    }
-
-    public int getWrappedEndIndex() {
-        return wrappedEndIndex;
-    }
-
-    public List<Pair<Integer, Integer>> getAffectedMiddleRangeList() {
-        return affectedMiddleRangeList;
-    }
-
-    // ***********************************************
-    // Complex methods
-    // ***********************************************
     public KOptAffectedElements merge(KOptAffectedElements other) {
-        int newWrappedStartIndex = this.wrappedStartIndex;
-        int newWrappedEndIndex = this.wrappedEndIndex;
+        var newWrappedStartIndex = this.wrappedStartIndex;
+        var newWrappedEndIndex = this.wrappedEndIndex;
 
         if (other.wrappedStartIndex != -1) {
             if (newWrappedStartIndex != -1) {
@@ -58,27 +29,27 @@ final class KOptAffectedElements {
             }
         }
 
-        List<Pair<Integer, Integer>> newAffectedMiddleRangeList =
-                CollectionUtils.concat(affectedMiddleRangeList, other.affectedMiddleRangeList);
+        var newAffectedMiddleRangeList = CollectionUtils.concat(affectedMiddleRangeList, other.affectedMiddleRangeList);
 
         boolean removedAny;
-        SearchForIntersectingInterval: do {
+        SearchForIntersectingRange: do {
             removedAny = false;
-            final int listSize = newAffectedMiddleRangeList.size();
-            for (int i = 0; i < listSize; i++) {
-                for (int j = i + 1; j < listSize; j++) {
-                    Pair<Integer, Integer> leftInterval = newAffectedMiddleRangeList.get(i);
-                    Pair<Integer, Integer> rightInterval = newAffectedMiddleRangeList.get(j);
+            final var listSize = newAffectedMiddleRangeList.size();
+            for (var i = 0; i < listSize; i++) {
+                for (var j = i + 1; j < listSize; j++) {
+                    var leftRange = newAffectedMiddleRangeList.get(i);
+                    var rightRange = newAffectedMiddleRangeList.get(j);
 
-                    if (leftInterval.key() <= rightInterval.value() &&
-                            rightInterval.key() <= leftInterval.value()) {
-                        Pair<Integer, Integer> mergedInterval =
-                                new Pair<>(Math.min(leftInterval.key(), rightInterval.key()),
-                                        Math.max(leftInterval.value(), rightInterval.value()));
-                        newAffectedMiddleRangeList.set(i, mergedInterval);
-                        newAffectedMiddleRangeList.remove(j);
-                        removedAny = true;
-                        continue SearchForIntersectingInterval;
+                    if (leftRange.startInclusive() <= rightRange.endExclusive()) {
+                        if (rightRange.startInclusive() <= leftRange.endExclusive()) {
+                            var mergedRange =
+                                    new Range(Math.min(leftRange.startInclusive(), rightRange.startInclusive()),
+                                            Math.max(leftRange.endExclusive(), rightRange.endExclusive()));
+                            newAffectedMiddleRangeList.set(i, mergedRange);
+                            newAffectedMiddleRangeList.remove(j);
+                            removedAny = true;
+                            continue SearchForIntersectingRange;
+                        }
                     }
                 }
             }
@@ -87,12 +58,8 @@ final class KOptAffectedElements {
         return new KOptAffectedElements(newWrappedStartIndex, newWrappedEndIndex, newAffectedMiddleRangeList);
     }
 
-    @Override
-    public String toString() {
-        return "KOptAffectedElementsInfo{" +
-                "wrappedStartIndex=" + wrappedStartIndex +
-                ", wrappedEndIndex=" + wrappedEndIndex +
-                ", affectedMiddleRangeList=" + affectedMiddleRangeList +
-                '}';
+    public record Range(int startInclusive, int endExclusive) {
+
     }
+
 }
